# Subtiles

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  subtiles.pro
subtiles/: CMakeLists.txt  main.cpp  subtiles.pro  subtilesapp.pro  subtilesmainwindow.cpp  subtilesmainwindow.h  subtilesmainwindow.ui
subtiles/graphics/: dialogtile.h
subtiles/inc/app/: abstractguest.h  command.h  commander.h  host.h  mainframe.h  subtilesabstractguest.h  subtileshost.h  subtilesmainframe.h
subtiles/inc/datatypes/: STBasicTypes.h  STDataOperator.h  STDataReader.h  STDialog.h  STSnapTree.h  STStyle.h  STTimecode.h  STTrack.h
subtiles/inc/graphics/: dialogtile.h  timelineview.h
subtiles/inc/guests/: stguestuistyleshow.h  timeline.h  uistyleshow.h
subtiles/inc/gui/: dialogtile.h  mainwindow.h  subtilesmainwindow.h  timelineview.h
subtiles/inc/utils/: color.h  convenience.h
subtiles/resources/: info.qrc  largeimgs.qrc  theme.qrc
subtiles/resources/styles/standard/: standard.qss
subtiles/src/: CMakeLists.txt  main.cpp
subtiles/src/app/: command.cpp  commander.cpp  host.cpp  mainframe.cpp  subtilesmainframe.cpp
subtiles/src/datatypes/: STBasicTypes.cpp  STDataOperator.cpp  STDataReader.cpp  STDialog.cpp  STSnapTree.cpp  STTimecode.cpp  STTrack.cpp
subtiles/src/graphics/: dialogtile.cpp  timelineview.cpp
subtiles/src/guests/: stguestuistyleshow.cpp  timeline.cpp  uistyleshow.cpp
subtiles/src/gui/: dialogtile.cpp  mainwindow.cpp  subtilesmainwindow.cpp  timelineview.cpp
subtiles/ui/: guest_uistyleshow.ui  subtilesmainwindow.ui
subtiles/unittest/: CMakeLists.txt
subtiles/unittest/datatypes_test/: CMakeLists.txt  datatypes_test.pro  tst_datatypes_test.cpp
subtiles/unittest/snaptree_test/: CMakeLists.txt  snaptree_test.cpp
